# shutup-mcp

./: .gitignore  LICENSE  NOTICE.md  README.md  RELEASE-NOTES-v0.3-alpha.md  action.yml  pyproject.toml
.github/workflows/: test.yml
examples/: basic_usage.py
reports/: shutup-mcp-v03-alpha-test-report.json
shutup/: __init__.py  cli.py  embedder.py  proxy.py  retriever.py  server_manager.py
tests/: __init__.py  test_embedder.py  test_proxy.py  test_retriever.py  test_server_manager.py
