[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shutup-mcp"
version = "0.3.0a0"
description = "Experimental MCP proxy for filtering large tool lists using hybrid semantic and keyword retrieval"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "yuqiang", email = "yuqiang@humanjudgment.org"}
]
keywords = ["mcp", "model-context-protocol", "agent", "tools", "filter", "ollama", "embeddings", "bm25", "hybrid-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "numpy>=1.24.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
sentence-transformers = [
    "sentence-transformers>=2.2.0",
]
ollama = [
    "ollama>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/hjs-spec/shutup-mcp"
Repository = "https://github.com/hjs-spec/shutup-mcp.git"
Issues = "https://github.com/hjs-spec/shutup-mcp/issues"

[project.scripts]
shutup = "shutup.cli:main"

[tool.setuptools.packages.find]
include = ["shutup*"]
